--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,35 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout
 
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/contenedorPrincipal"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
+        <FrameLayout
+            android:id="@+id/contenedorFragmento"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/contenedorFragmento">
-
-    </FrameLayout>
+        </FrameLayout>
 
     </LinearLayout>
 
 
     <ListView
+        android:id="@+id/menu"
         android:layout_width="240dp"
         android:layout_height="match_parent"
-        android:id="@+id/menu"
         android:layout_gravity="start"
-        android:background="#C8E6C9">
-    </ListView>
+        android:background="#C8E6C9"></ListView>
 
 
 </android.support.v4.widget.DrawerLayout>
