--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,19 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <ImageView
+            android:padding="32dp"
+            android:background="#fff"
+            android:id="@+id/imageTemsa"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/temsalogo"/>
+
         <FrameLayout
+            android:background="#fff"
             android:id="@+id/contenedorFragmento"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
         </FrameLayout>
 
     </LinearLayout>
