--- a/app/src/main/res/layout/activity_print.xml
+++ b/app/src/main/res/layout/activity_print.xml
@@ -8,11 +8,6 @@
     android:padding="16dp"
     tools:context="cl.fosforos.trazabilidadtemc.Print">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="printTest"
-        android:text="Imprimir etiqueta" />
 
     <ScrollView
         android:layout_width="wrap_content"
@@ -30,7 +25,7 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_width="20mm"
+                    android:layout_width="23mm"
                     android:layout_height="66.66mm"
                     android:background="#fff"
                     android:gravity="right"
@@ -46,7 +41,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="80mm"
+                    android:layout_width="77mm"
                     android:layout_height="66.66mm"
                     android:background="#fff"
                     android:orientation="vertical">
@@ -56,35 +51,34 @@
                         android:layout_height="22mm"
                         android:background="#fff"
                         android:gravity="center"
-                        android:orientation="vertical"
-                        >
+                        android:orientation="vertical">
 
                         <TextView
                             android:id="@+id/txtNombreProducto"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="CORBATA 93 mm"
-                            android:textStyle="bold"
+                            android:text="PH 114 mm"
                             android:textColor="#000"
                             android:textSize="35sp"
-                            />
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/txtCantidad"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="CONTENIDO: 5000 UN"
-                            android:textStyle="bold"
+                            android:text="CONTENIDO: 10.000 UN"
                             android:textColor="#000"
-                            android:textSize="20sp" />
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+
                         <TextView
                             android:id="@+id/txtMarcaProducto"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="NESTLÉ CHILE"
-                            android:textStyle="bold"
+                            android:text="TEMSA CHILE"
                             android:textColor="#000"
-                            android:textSize="40sp" />
+                            android:textSize="40sp"
+                            android:textStyle="bold" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -103,22 +97,22 @@
                         android:weightSum="1">
 
                         <ImageView
-                            android:padding="5dp"
                             android:id="@+id/im1"
                             android:layout_width="504dp"
                             android:layout_height="43dp"
-                            android:src="@drawable/temsalado"
-                            android:layout_weight="0.34" />
+                            android:layout_weight="0.34"
+                            android:padding="5dp"
+                            android:src="@drawable/temsalado" />
 
                         <TextView
-                            android:padding="5dp"
+                            android:id="@+id/textView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:padding="5dp"
                             android:text="CAJA: 025858-684165"
                             android:textColor="#000"
-                            android:textStyle="bold"
                             android:textSize="15sp"
-                            android:id="@+id/textView" />
+                            android:textStyle="bold" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -130,61 +124,74 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:orientation="horizontal">
+                        android:orientation="vertical"
+                        android:gravity="center">
 
                         <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="22mm"
-                            android:background="#fff"
-                            android:gravity="center"
-                            android:orientation="vertical"
-                            >
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center|top"
+                            android:orientation="horizontal">
 
-                            <TextView
+                            <LinearLayout
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="LOTE: P010201300-123121312/23423"
-                                android:textStyle="bold"
-                                android:textColor="#000"
-                                android:textSize="22sp"
-                                android:layout_marginBottom="16dp"/>
+                                android:background="#fff"
+                                android:gravity="center"
+                                android:orientation="vertical">
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="MANTENGASE EN UN LUGAR PRESCO Y SECO"
-                                android:textStyle="bold"
-                                android:textColor="#000"
-                                android:textSize="15sp" />
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginBottom="16dp"
+                                    android:text="LOTE: P010201300-123121312/2342"
+                                    android:textColor="#000"
+                                    android:textSize="22sp"
+                                    android:textStyle="bold" />
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="DURACIÓN: 24 MESES"
-                                android:textStyle="bold"
-                                android:textColor="#000"
-                                android:textSize="15sp" />
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="MANTENGASE EN UN LUGAR PRESCO Y SECO"
+                                    android:textColor="#000"
+                                    android:textSize="15sp"
+                                    android:textStyle="bold" />
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="PALITO DE USO EXCLUSIVO PARA LA INDUSTRIA DEL HELADO"
-                                android:textStyle="bold"
-                                android:textColor="#000"
-                                android:textSize="14sp" />
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="DURACIÓN: 24 MESES"
+                                    android:textColor="#000"
+                                    android:textSize="15sp"
+                                    android:textStyle="bold" />
+
+
+                            </LinearLayout>
+
+                            <ImageView
+                                android:id="@+id/datamatrix"
+                                android:layout_width="180px"
+                                android:layout_height="180px"
+                                android:layout_gravity="center" />
+
                         </LinearLayout>
-
-                        <ImageView
-                            android:id="@+id/datamatrix"
-                            android:layout_width="200px"
-                            android:layout_height="200px"
-                            android:layout_gravity="center" />
-
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="PALITO DE USO EXCLUSIVO PARA LA INDUSTRIA DEL HELADO"
+                            android:textColor="#000"
+                            android:textSize="17sp"
+                            android:textStyle="bold" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
         </HorizontalScrollView>
     </ScrollView>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="printTest"
+        android:text="Imprimir etiqueta" />
 
 </LinearLayout>
