--- a/app/src/main/res/layout/activity_print.xml
+++ b/app/src/main/res/layout/activity_print.xml
@@ -93,16 +93,14 @@
                         android:background="#fff"
                         android:gravity="center"
                         android:orientation="vertical"
-
                         android:weightSum="1">
 
                         <ImageView
                             android:id="@+id/im1"
-                            android:layout_width="504dp"
-                            android:layout_height="43dp"
-                            android:layout_weight="0.34"
-                            android:padding="5dp"
-                            android:src="@drawable/temsalado" />
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:padding="16dp"
+                            android:layout_weight="1" />
 
                         <TextView
                             android:id="@+id/textView"
@@ -141,6 +139,7 @@
                                 android:orientation="vertical">
 
                                 <TextView
+                                    android:id="@+id/txtLote"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginBottom="16dp"
@@ -164,7 +163,6 @@
                                     android:textColor="#000"
                                     android:textSize="15sp"
                                     android:textStyle="bold" />
-
 
                             </LinearLayout>
 
