--- a/app/src/main/res/layout/activity_print.xml
+++ b/app/src/main/res/layout/activity_print.xml
@@ -72,7 +72,7 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/txtMarcaProducto"
+                            android:id="@+id/txtCliente"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="TEMSA CHILE"
@@ -103,7 +103,7 @@
                             android:layout_weight="1" />
 
                         <TextView
-                            android:id="@+id/textView"
+                            android:id="@+id/txtCaja"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:padding="5dp"
@@ -190,6 +190,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="printTest"
-        android:text="Imprimir etiqueta" />
+        android:text="Imprimir etiqueta"
+        android:visibility="invisible"/>
 
 </LinearLayout>
