--- a/app/src/main/res/layout/activity_paletizado.xml
+++ b/app/src/main/res/layout/activity_paletizado.xml
@@ -67,31 +67,31 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginTop="20sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20sp"
         android:orientation="vertical">
 
         <Spinner
-            android:layout_marginLeft="10sp"
-            android:layout_marginBottom="16dp"
+            android:id="@+id/spinerPTerminado"
             android:layout_width="match_parent"
             android:layout_height="30sp"
-            android:id="@+id/spinerPTerminado"/>
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="10sp" />
 
         <Spinner
-            android:layout_marginLeft="10sp"
-            android:layout_marginBottom="16dp"
+            android:id="@+id/spinerMarca"
             android:layout_width="match_parent"
             android:layout_height="30sp"
-            android:id="@+id/spinerMarca"/>
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="10sp" />
 
         <Spinner
-            android:layout_marginLeft="10sp"
-            android:layout_marginBottom="16dp"
+            android:id="@+id/spinerCliente"
             android:layout_width="match_parent"
             android:layout_height="30sp"
-            android:id="@+id/spinerCliente"/>
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="10sp" />
 
     </LinearLayout>
 
@@ -243,17 +243,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginLeft="90sp"
         android:layout_marginRight="90sp"
+        android:orientation="vertical"
         android:weightSum="1">
 
         <Button
-            android:layout_marginTop="16dp"
-            android:text="Armar pallet"
+            android:id="@+id/botLeerQR"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/botLeerQR" />
+            android:layout_marginTop="16dp"
+            android:text="Armar pallet" />
 
         <!--Button
             android:text="prueba impresion"
@@ -274,6 +274,7 @@
         android:id="@+id/btReimprimir"
         android:layout_marginTop="80dp"
         android:layout_gravity="center"
+        android:onClick="reImprimirEtiqueta"
         />
 
 
